@@ -1,6 +1,7 @@
 Revision history for Lufi
 
 0.08.0 ????-??-??
+	- 🔧 — Rename ldap_user to auth_user for invitations (@mildis)
 
 0.07.2 2025-07-29
 	- 🐛 — Fix bug in POST file deletion (#319)
